# xddcc-autoclicker

./: BUILD_LINUX.md  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  THEME_GUIDE.md  main.cpp
images-delete-this/: readme.txt
resources/: resources.qrc
src/: clickengine.cpp  clickengine.h  main.cpp  mainwindow.cpp  mainwindow.h  particlewidget.cpp  particlewidget.h  positionpicker.cpp  positionpicker.h  settingsdialog.cpp  settingsdialog.h  starburstwidget.cpp  starburstwidget.h  themeeditor.cpp  themeeditor.h  thememanager.cpp  thememanager.h  windowpicker.cpp  windowpicker.h
src/themes/: default.json  xddcc.json
